add lombok dependency for getter and setter